<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/sign_back"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/b_sign_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/b_sign_up"
        app:layout_constraintStart_toStartOf="@+id/b_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/b_sign_up"
        app:layout_constraintVertical_bias="0.24000001" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="TextView"
        android:textColor="@color/orange"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_mail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_shape"
        android:ems="10"
        android:hint="@string/enter_mail"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/edit_shape"
        android:ems="10"
        android:hint="@string/enter_pass"
        android:inputType="textPassword"
        android:padding="5dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ed_mail"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail" />

    <Button
        android:id="@+id/b_sign_up"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_shape"
        android:text="@string/register"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />

    <CheckBox
        android:id="@+id/ch_pas"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickPas"
        app:layout_constraintStart_toEndOf="@+id/ed_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail" />

    <TextView
        android:id="@+id/restore_pas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="196dp"
        android:layout_marginBottom="16dp"
        android:text="@string/re_pas"
        android:textColor="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="@+id/ed_mail"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail" />

    <Button
        android:id="@+id/b_send_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edit_shape"
        android:text="@string/send_restore"
        android:visibility="gone"
        app:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="@+id/ed_mail"
        app:layout_constraintStart_toStartOf="@+id/ed_mail"
        app:layout_constraintTop_toBottomOf="@+id/ed_mail" />

</androidx.constraintlayout.widget.ConstraintLayout>